<resources>
    <string name="app_name">CS125 Final</string>
    <string name="martinName">Martin Beczkiewicz</string>
    <string name="davidName">David Ruvinskiy</string>
    <string name="louName">Lou Zeh</string>
    <string name="benName">Ben Nordick</string>
    <string name="danielName">Daniel Gleason</string>
    <string name="gameOverTop">You Are Not Ready</string>
    <string name="gameOverBot">Maybe try a few more homework problems?</string>
    <string name="gameOverTopGeoff">NullPointerException</string>
    <string name="gameOverBotGeoff">Opponent Not Found</string>
    <string name="gameVictoryTop">Congratulations!</string>
    <string name="gameVictoryBot">You are now a Head CA of cs125!</string>
</resources>
