<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cs125Logo2"
        android:layout_width="287dp"
        android:layout_height="300dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="268dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cs125"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blackbackground" />

    <TextView
        android:id="@+id/gameVitoryBot2"
        android:layout_width="282dp"
        android:layout_height="112dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="480dp"
        android:autoText="false"
        android:bufferType="normal"
        android:capitalize="none"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="@string/gameVictoryBot"
        android:textColor="#E10B0B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/gameVitoryTop"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="88dp"
        android:autoText="false"
        android:bufferType="normal"
        android:capitalize="none"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="@string/gameVictoryTop"
        android:textColor="#E10B0B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/gOverBot"
        android:layout_width="344dp"
        android:layout_height="139dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="468dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="@string/gameOverBot"
        android:textColor="#E10B0B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/gOverBotGeoff"
        android:layout_width="344dp"
        android:layout_height="139dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="468dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="@string/gameOverBotGeoff"
        android:textColor="#E10B0B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/gameOverFire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginBottom="292dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bonfire"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/gameOverGeoff"
        android:layout_width="259dp"
        android:layout_height="251dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginBottom="292dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/error"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/gOverTop"
        android:layout_width="288dp"
        android:layout_height="65dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="84dp"
        android:autoText="false"
        android:bufferType="normal"
        android:capitalize="none"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="@string/gameOverTop"
        android:textColor="#E10B0B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/gOverTopGeoff"
        android:layout_width="315dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="88dp"
        android:autoText="false"
        android:bufferType="normal"
        android:capitalize="none"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="@string/gameOverTopGeoff"
        android:textColor="#E10B0B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>